# quicX

./: .clang-format  .dockerignore  .gitignore  .gitmodules  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  MODULE.bazel  README.md  README_cn.md  SECURITY.md  TODO.md  WORKSPACE.bazel  azure-pipelines.yml  makefile  quicX.sln  quicX.vcxproj  quicX.vcxproj.filters  run_tests.py
example/: BUILD.bazel  CMakeLists.txt  _test_helpers.py  event_driver_example.cpp  makefile  test.cpp
example/bidirectional_comm/: CMakeLists.txt  README.md  client.cpp  run_test.py  server.cpp
example/concurrent_requests/: CMakeLists.txt  README.md  README_cn.md  client.cpp  run_test.py  server.cpp
example/connection_lifecycle/: CMakeLists.txt  README.md  demo.cpp  run_test.py
example/connection_lifecycle/qlog_output_server/: 2026-05-23-14-29-23_server.sqlog  2026-05-23-14-29-25_14297231.sqlog  2026-05-23-14-29-25_82968338.sqlog  2026-05-23-23-13-49_server.sqlog  2026-05-23-23-13-51_17574762.sqlog  2026-05-23-23-13-51_21190317.sqlog
example/error_handling/: CMakeLists.txt  README.md  client.cpp  run_test.py  server.cpp
example/file_transfer/: CMakeLists.txt  README.md  README_cn.md  client.cpp  run_test.py  server.cpp
example/hello_world/: CMakeLists.txt  README.md  client.cpp  makefile  run_test.py  server.cpp
example/hello_world/qlog_output_client/: 2026-05-23-14-29-25_87374263.sqlog  2026-05-23-14-46-11_98358964.sqlog  2026-05-23-23-13-51_15686874.sqlog
example/hello_world/qlog_output_server/: 2026-05-23-14-46-09_server.sqlog  2026-05-23-14-46-11_16417680.sqlog  2026-05-23-14-46-11_18264086.sqlog
example/load_testing/: CMakeLists.txt  README.md  load_tester.cpp
example/metrics_monitoring/: CMakeLists.txt  README.md  client.cpp  run_test.py  server.cpp
example/performance_benchmark/: CMakeLists.txt  README.md  benchmark.cpp
example/qlog_integration/: CMakeLists.txt  README.md  client.cpp  server.cpp
example/quicx_curl/: CMakeLists.txt  args_parser.cpp  args_parser.h  http_client.cpp  http_client.h  main.cpp  output_formatter.cpp  output_formatter.h
example/restful_api/: CMakeLists.txt  README.md  README_cn.md  client.cpp  run_test.py  server.cpp
example/server_push/: CMakeLists.txt  README.md  client.cpp  makefile  run_test.py  server.cpp
example/static_server/: CMakeLists.txt  README.md  run.sh  server.cpp
example/static_server/www/: index.html
example/streaming_api/: CMakeLists.txt  README.md  client.cpp  run_test.py  server.cpp
example/upgrade_h3/: CMakeLists.txt  README.md  server.cpp
fuzz/: CMakeLists.txt  build.sh
fuzz/quic/frame/: frame_fuzz.cpp
fuzz/quic/packet/: handshake_packet_fuzz.cpp  init_packet_fuzz.cpp  packet_decode_fuzz.cpp  retry_packet_fuzz.cpp  rtt0_packet_fuzz.cpp  rtt1_packet_fuzz.cpp  short_header_fuzz.cpp  test_cryptographer.h  version_negotiation_packet_fuzz.cpp
fuzz/quic_header_parser/: CMakeLists.txt  long_header_fuzz.cpp  main_gdb.cpp
include/: BUILD.bazel
include/quicx/common/: if_buffer_read.h  if_buffer_write.h  if_event_loop.h  metrics.h  metrics_std.h  version.h
include/quicx/http3/: if_async_handler.h  if_client.h  if_request.h  if_response.h  if_server.h  type.h
include/quicx/quic/: if_quic_bidirection_stream.h  if_quic_client.h  if_quic_connection.h  if_quic_recv_stream.h  if_quic_send_stream.h  if_quic_server.h  if_quic_stream.h  type.h
include/quicx/upgrade/: if_upgrade.h  type.h
interop/src/: CMakeLists.txt  interop_client.cpp  interop_server.cpp
src/common/: BUILD.bazel
src/common/alloter/: alloter_interface.h  if_alloter.h  normal_alloter.cpp  normal_alloter.h  pool_alloter.cpp  pool_alloter.h  pool_block.cpp  pool_block.h
src/common/buffer/: buffer.cpp  buffer.h  buffer_block.cpp  buffer_block.h  buffer_chains.cpp  buffer_chains.h  buffer_chains_interface.h  buffer_chains_read_write.h  buffer_chunk.cpp  buffer_chunk.h  buffer_chunk_pool.cpp  buffer_chunk_pool.h  buffer_decode_wrapper.cpp  buffer_decode_wrapper.h  buffer_encode_wrapper.cpp  buffer_encode_wrapper.h  buffer_interface.h  buffer_queue.cpp  buffer_queue.h  buffer_read.cpp  buffer_read.h  buffer_read_interface.h  buffer_read_view.cpp  buffer_read_view.h  buffer_read_write.cpp  buffer_read_write.h  buffer_reader.cpp  buffer_reader.h  buffer_readonly.cpp  buffer_readonly.h  buffer_slice.h  buffer_sort_chains.cpp  buffer_sort_chains.h  buffer_sort_chains_interface.h  buffer_span.cpp  buffer_span.h  buffer_view.cpp  buffer_view.h  buffer_write.cpp  buffer_write.h  (+28 more)
src/common/decode/: decode.cpp  decode.h  normal_decode.h
src/common/event/: event_actions.h
src/common/http/: url.cpp  url.h
src/common/include/: if_buffer_read.h  if_buffer_write.h  type.h
src/common/lock/: spin_lock.cpp  spin_lock.h
src/common/log/: base_logger.cpp  base_logger.h  file_logger.cpp  file_logger.h  if_logger.h  log.cpp  log.h  log_context.cpp  log_context.h  log_interface.cpp  log_interface.h  log_stream.cpp  log_stream.h  logger_interface.h  stdout_log.cpp  stdout_log.h  stdout_logger.cpp  stdout_logger.h
src/common/metrics/: metrics.cpp  metrics.h  metrics_internal.h  metrics_std.cpp  (+3 more)
src/http3/: BUILD.bazel  config.h
src/quic/: BUILD.bazel  config.h
src/upgrade/: BUILD.bazel
test/benchmarks/: CMakeLists.txt  alloter_smartptr_bench.cpp  buffer_bench.cpp  buffer_chains_bench.cpp  congestion_bench.cpp  http3_e2e_bench.cpp  metrics_bench.cpp  qlog_overhead_bench.cpp  qpack_bench.cpp  qpack_decode_bench.cpp  qpack_huffman_bench.cpp  qpack_instr_bench.cpp  quic_ack_maxdata_bench.cpp  quic_aead_bench.cpp  quic_frame_bench.cpp  timer_bench.cpp  varint_bench.cpp
test/congestion_control/: CMakeLists.txt  cc_algorithm_validation_test.cpp  cc_bbr_detailed_test.cpp  cc_comprehensive_test.cpp  cc_realistic_network_test.cpp  cc_test_framework.cpp  cc_test_framework.h  network_simulator.cpp  network_simulator.h
unit_test/: BUILD.bazel  test.cpp
unit_test/common/: time_consuming.cpp
utest/: BUILD.bazel  CMakeLists.txt  makefile  ut_bitmap.cpp  utest.vcxproj  utest.vcxproj.filters
utest/common/: time_consuming.cpp  time_consuming.h
(+1429 files in other folders)
