package(default_visibility = ["//visibility:public"])

# Convenience aggregate of all unit tests. Run with:
#   bazel test //:all_unit_tests
test_suite(
    name = "all_unit_tests",
    tests = [
        "//test/unit_test:all_tests",
    ],
)

# Aggregate static library matching the CMake `quicx` target: QUIC transport
# only (no HTTP/3 layer). Note: //src/quic:quic is itself an alias of
# //src/common:common (see //src/quic/BUILD.bazel), so a single dep is
# enough.
cc_library(
    name = "libquicx",
    deps = [
        "//src/common:common",
    ],
    linkstatic = True,
)

# Aggregate static library matching the CMake `http3` target: full QUIC +
# HTTP/3 + protocol-upgrade stack.
cc_library(
    name = "libhttp3",
    deps = [
        "//src/common:common",
        "//src/http3:http3",
        "//src/upgrade:upgrade",
    ],
    linkstatic = True,
)
