add_subdirectory(hello_world)
add_subdirectory(server_push)
add_subdirectory(restful_api)
add_subdirectory(concurrent_requests)
add_subdirectory(quicx_curl)
add_subdirectory(streaming_api)
add_subdirectory(file_transfer)
add_subdirectory(error_handling)
add_subdirectory(connection_lifecycle)
add_subdirectory(performance_benchmark)
add_subdirectory(bidirectional_comm)
add_subdirectory(load_testing)