package(default_visibility = ["//visibility:public"])

# Centralized test support libs (moved from subpackages)
cc_library(
    name = "common_support",
    srcs = [
        "common/time_consuming.cpp",
    ],
    hdrs = [
        "common/time_consuming.h",
    ],
    include_prefix = "unit_test/common",
)

cc_library(
    name = "http3_support",
    srcs = [
        "http3/connection/mock_quic_connection.cpp",
        "http3/stream/mock_quic_tream.cpp",
    ],
    hdrs = [
        "http3/connection/mock_quic_connection.h",
        "http3/stream/mock_quic_stream.h",
    ],
    include_prefix = "unit_test/http3",
    deps = [
        "//src/common:common",
        "//src/quic:quic",
        "//src/http3:http3",
    ],
)

cc_library(
    name = "quic_support",
    srcs = [
        "quic/packet/common_test_frame.cpp",
    ],
    hdrs = glob([
        "quic/**/*.h",
    ]),
    include_prefix = "unit_test/quic",
    deps = [
        "//src/common:common",
        "//src/quic:quic",
    ],
)

cc_test(
    name = "all_tests",
    srcs = glob([
        "**/*_test.cpp",
    ]),
    deps = [
        ":common_support",
        ":http3_support",
        ":quic_support",
        "//third/googletest:gtest_main",
        "//src/common:common",
        "//src/quic:quic",
        "//src/http3:http3",
        "//src/upgrade:upgrade",
    ],
)
